--- a/index.html
+++ b/index.html
@@ -119,31 +119,55 @@
                 </div>
             </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
         </main>
 
-        <footer>
+        <footer>   
+            <div class="settings">
+                <img src="https://www.freeiconspng.com/uploads/youtube-logo-png-transparent-image-5.png" alt="YouTube">
+                <div>
+                    <select name="lang" id="lang">
+                        <Option>English</Option>
+                        <Option>French</Option>
+                        <Option>Spanish</Option>
+                    </select>
+                </div>
+                <div>
+                    <select name="location" id="location">
+                        <Option>Neatherlands</Option>
+                        <Option>Nigeria</Option>
+                        <Option>Saudi Arabia</Option>
+                    </select>
+                </div>
+                <div>
+                    <select name="Restriction" id="mode">
+                        <Option>Off</Option>
+                        <Option>On</Option>
+                    </select>
+                </div>
+                <div>
+                    <button>History</button>
+                </div>
+                <div>
+                    <button>Help</button>
+                </div>
+            </div> 
+          
+
+            <div class="about">
+                <a href="#">About</a>
+                <a href="#">Press</a>
+                <a href="#">Copyright</a> 
+                <a href="#">Creators</a> 
+                <a href="#">Advertise</a> 
+                <a href="#">Developers</a> 
+            </div>
+
+            <div class="terms">
+                <a href="#">Terms</a>    
+                <a href="#">Privacy</a>
+                <a href="#">Policy & Safety</a>
+                <a href="#">Test new features</a>
+            </div>
 
         </footer>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
