--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-        <title>YouTube</title>
+        <title>If you challenge Messi, you will regret it</title>
+        <link rel="shortcut icon" type="png/image" href="/assets/images/logos/favicon.ico">
     </head>
 
     <body>
@@ -89,6 +90,17 @@
                         </div>
                         <div class="vid-info">
                             <p class="title">Contributing to open source part 2.</p>
+                            <p class="channel">The Odin Project.</p> 
+                            <p class="views">29,985 views</p>
+                        </div>
+                    </div>
+
+                    <div class="suggest-vid">
+                        <div class="vid">
+                            <a href=""><img src="/assets/images/others/2O7K-8G2nwUhd.jpg" alt=""></a>
+                        </div>
+                        <div class="vid-info">
+                            <p class="title">Contributing to open source part 909909.</p>
                             <p class="channel">The Odin Project.</p> 
                             <p class="views">29,985 views</p>
                         </div>
