footer feature completed

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         </div>
                     </div>
 
-                    <hr>
+                    <hr class="hr-sug">
 
                     <div class="suggest-vid">
                         <div class="vid">
@@ -90,17 +90,6 @@
                         </div>
                         <div class="vid-info">
                             <p class="title">Contributing to open source part 2.</p>
-                            <p class="channel">The Odin Project.</p> 
-                            <p class="views">29,985 views</p>
-                        </div>
-                    </div>
-
-                    <div class="suggest-vid">
-                        <div class="vid">
-                            <a href=""><img src="/assets/images/others/2O7K-8G2nwUhd.jpg" alt=""></a>
-                        </div>
-                        <div class="vid-info">
-                            <p class="title">Contributing to open source part 909909.</p>
                             <p class="channel">The Odin Project.</p> 
                             <p class="views">29,985 views</p>
                         </div>
@@ -128,7 +117,178 @@
                         </div>
                     </div>
 
-                </div>
+                    <div class="suggest-vid">
+                        <div class="vid">
+                            <a href=""><img src="http://i3.ytimg.com/vi/Jeiu7y-a220/maxresdefault.jpg"  alt=""></a>
+                        </div>
+                        <div class="vid-info">
+                            <p class="title">Contributing to open source part 2.</p>
+                            <p class="channel">The Odin Project.</p> 
+                            <p class="views">29,985 views</p>
+                        </div>
+                    </div>
+
+                    <div class="suggest-vid">
+                        <div class="vid">
+                            <a href=""><img src="http://i3.ytimg.com/vi/P_Lvfo08u3w/maxresdefault.jpg" alt=""></a>
+                        </div>
+                        <div class="vid-info">
+                            <p class="title">Contributing to open source part 2.</p>
+                            <p class="channel">The Odin Project.</p> 
+                            <p class="views">29,985 views</p>
+                        </div>
+                    </div>
+
+                    <div class="suggest-vid">
+                        <div class="vid">
+                            <a href=""><img src="http://i3.ytimg.com/vi/uFG6WAhi7Mw/maxresdefault.jpg" alt=""></a>
+                        </div>
+                        <div class="vid-info">
+                            <p class="title">Contributing to open source part 2.</p>
+                            <p class="channel">The Odin Project.</p> 
+                            <p class="views">29,985 views</p> 
+                        </div>
+                    </div>
+
+                    <div class="suggest-vid">
+                        <div class="vid">
+                            <a href=""><img src="http://i3.ytimg.com/vi/7vlSdLatXow/hqdefault.jpg" alt=""></a>
+                        </div>
+                        <div class="vid-info">
+                            <p class="title">Contributing to open source part 2.</p>
+                            <p class="channel">The Odin Project.</p> 
+                            <p class="views">29,985 views</p>
+                        </div>
+                    </div>
+
+                    <div class="suggest-vid">
+                        <div class="vid">
+                            <a href=""><img src="http://i3.ytimg.com/vi/Jeiu7y-a220/maxresdefault.jpg"  alt=""></a>
+                        </div>
+                        <div class="vid-info">
+                            <p class="title">Contributing to open source part 2.</p>
+                            <p class="channel">The Odin Project.</p> 
+                            <p class="views">29,985 views</p>
+                        </div>
+                    </div>
+
+                    <div class="suggest-vid">
+                        <div class="vid">
+                            <a href=""><img src="http://i3.ytimg.com/vi/P_Lvfo08u3w/maxresdefault.jpg" alt=""></a>
+                        </div>
+                        <div class="vid-info">
+                            <p class="title">Contributing to open source part 2.</p>
+                            <p class="channel">The Odin Project.</p> 
+                            <p class="views">29,985 views</p>
+                        </div>
+                    </div>
+
+                    <div class="suggest-vid">
+                        <div class="vid">
+                            <a href=""><img src="http://i3.ytimg.com/vi/uFG6WAhi7Mw/maxresdefault.jpg" alt=""></a>
+                        </div>
+                        <div class="vid-info">
+                            <p class="title">Contributing to open source part 2.</p>
+                            <p class="channel">The Odin Project.</p> 
+                            <p class="views">29,985 views</p> 
+                        </div>
+                    </div>
+
+                    <div class="suggest-vid">
+                        <div class="vid">
+                            <a href=""><img src="http://i3.ytimg.com/vi/7vlSdLatXow/hqdefault.jpg" alt=""></a>
+                        </div>
+                        <div class="vid-info">
+                            <p class="title">Contributing to open source part 2.</p>
+                            <p class="channel">The Odin Project.</p> 
+                            <p class="views">29,985 views</p>
+                        </div>
+                    </div>
+
+                    <div class="suggest-vid">
+                        <div class="vid">
+                            <a href=""><img src="http://i3.ytimg.com/vi/Jeiu7y-a220/maxresdefault.jpg"  alt=""></a>
+                        </div>
+                        <div class="vid-info">
+                            <p class="title">Contributing to open source part 2.</p>
+                            <p class="channel">The Odin Project.</p> 
+                            <p class="views">29,985 views</p>
+                        </div>
+                    </div>
+
+                    <div class="suggest-vid">
+                        <div class="vid">
+                            <a href=""><img src="http://i3.ytimg.com/vi/P_Lvfo08u3w/maxresdefault.jpg" alt=""></a>
+                        </div>
+                        <div class="vid-info">
+                            <p class="title">Contributing to open source part 2.</p>
+                            <p class="channel">The Odin Project.</p> 
+                            <p class="views">29,985 views</p>
+                        </div>
+                    </div>
+
+                    <div class="suggest-vid">
+                        <div class="vid">
+                            <a href=""><img src="http://i3.ytimg.com/vi/uFG6WAhi7Mw/maxresdefault.jpg" alt=""></a>
+                        </div>
+                        <div class="vid-info">
+                            <p class="title">Contributing to open source part 2.</p>
+                            <p class="channel">The Odin Project.</p> 
+                            <p class="views">29,985 views</p> 
+                        </div>
+                    </div>
+
+                    <div class="suggest-vid">
+                        <div class="vid">
+                            <a href=""><img src="http://i3.ytimg.com/vi/7vlSdLatXow/hqdefault.jpg" alt=""></a>
+                        </div>
+                        <div class="vid-info">
+                            <p class="title">Contributing to open source part 2.</p>
+                            <p class="channel">The Odin Project.</p> 
+                            <p class="views">29,985 views</p>
+                        </div>
+                    </div>
+
+                    <div class="suggest-vid">
+                        <div class="vid">
+                            <a href=""><img src="http://i3.ytimg.com/vi/Jeiu7y-a220/maxresdefault.jpg"  alt=""></a>
+                        </div>
+                        <div class="vid-info">
+                            <p class="title">Contributing to open source part 2.</p>
+                            <p class="channel">The Odin Project.</p> 
+                            <p class="views">29,985 views</p>
+                        </div>
+                    </div>
+
+                    <div class="suggest-vid">
+                        <div class="vid">
+                            <a href=""><img src="http://i3.ytimg.com/vi/P_Lvfo08u3w/maxresdefault.jpg" alt=""></a>
+                        </div>
+                        <div class="vid-info">
+                            <p class="title">Contributing to open source part 2.</p>
+                            <p class="channel">The Odin Project.</p> 
+                            <p class="views">29,985 views</p>
+                        </div>
+                    </div>
+
+                    <div class="suggest-vid">
+                        <div class="vid">
+                            <a href=""><img src="http://i3.ytimg.com/vi/uFG6WAhi7Mw/maxresdefault.jpg" alt=""></a>
+                        </div>
+                        <div class="vid-info">
+                            <p class="title">Contributing to open source part 2.</p>
+                            <p class="channel">The Odin Project.</p> 
+                            <p class="views">29,985 views</p> 
+                        </div>
+                    </div>
+                    <div class="more">
+                        <a href="" class="upnext">Up next</a>
+                        <div class="" style="float:right">
+                            <a href="" class="auto" style="color: #ABABAB; font-weight: bolder;">Autoplay</a>
+                            <i class="fa fa-exclamation-circle" style="color: #808080;"></i>
+                            <i class="fa fa-toggle-on fa-lg"></i>
+                        </div>
+                    </div>
             </div>
 
         </main>
@@ -137,34 +297,34 @@
             <div class="settings">
                 <img src="https://www.freeiconspng.com/uploads/youtube-logo-png-transparent-image-5.png" alt="YouTube">
                 <div>
-                    <button>Language:
-                        <select name="lang" id="lang">
-                            <Option>English</Option>
-                            <Option>French</Option>
-                            <Option>Spanish</Option>
-                        </select>
-                        
-                    </button>
-                    
-                </div>
+                    <i class="fa fa-user fa-lg"></i> 
+                    <label for="language">Language:</label>
+                    <select name="language" id="language">
+                        <Option value="English">English</Option>
+                        <Option value="French">French</Option>
+                        <Option value="Spanish">Spanish</Option>
+                    </select>
+                </div> 
                 <div>
+                    <label for="location">Location:</label>
                     <select name="location" id="location">
-                        <Option>Neatherlands</Option>
-                        <Option>Nigeria</Option>
-                        <Option>Saudi Arabia</Option>
+                        <Option value="Netherlands">Netherlands</Option>
+                        <Option value="Nigeria">Nigeria</Option>
+                        <Option value="Saudi Arabia">Saudi Arabia</Option>
                     </select>
                 </div>
                 <div>
-                    <select name="Restriction" id="mode">
-                        <Option>Off</Option>
-                        <Option>On</Option>
+                    <label for="restriction">Restriction:</label>
+                    <select name="restriction" id="restriction">
+                        <Option value="Off">Off</Option>
+                        <Option value="On">On</Option>
                     </select>
                 </div>
                 <div>
-                    <button>History</button>
+                    <button onclick="window.location.href='#'">History</button>
                 </div>
                 <div>
-                    <button>Help</button>
+                    <button onclick="window.location.href='#'">Help</button>
                 </div>
             </div> 
 
@@ -188,7 +348,6 @@
             </div>
 
         </footer>
-        FOOTER TROUBLESHOOT
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
