final modification of footer and video embedding completed

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-        <title>If you challenge Messi, you will regret it</title>
+        <title>Cristiano Ronaldo vs Lionel Messi 2020</title>
         <link rel="shortcut icon" type="png/image" href="/assets/images/logos/favicon.ico">
     </head>
 
@@ -44,9 +44,10 @@
 
             <div class="vidcontent">
                 <div class="vid-des">
-    <video width="100%" height="auto" poster="http://i3.ytimg.com/vi/RPol9PGRvtE/hqdefault.jpg" type="video/mp4" >
-                  </video>
-               <div></div>
+                  <iframe  height="686.533px" src="https://www.youtube.com/embed/NOras8n86Fo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+               <div>
+                
+               </div>
                     <div></div>
                     <div></div>
                 </div>
@@ -65,9 +66,9 @@
                             <a href=""><img src="http://i3.ytimg.com/vi/adseCgsYSYs/maxresdefault.jpg" style="width: 100%;" alt=""></a>
                         </div>
                         <div class="vid-info">
-                           <p class="title">Contributing to open source part 2.</p>
-                           <p class="channel">The Odin Project.</p> 
-                           <p class="views">29,985 views</p>
+                           <p class="title">10 Times Lionel Messi Showed Who Is The Boss - HD</p>
+                           <p class="channel">Magical Messi</p> 
+                           <p class="views">14M views</p>
                         </div>
                     </div>
 
@@ -78,9 +79,9 @@
                             <a href=""><img src="http://i3.ytimg.com/vi/Jeiu7y-a220/maxresdefault.jpg"  alt=""></a>
                         </div>
                         <div class="vid-info">
-                            <p class="title">Contributing to open source part 2.</p>
-                            <p class="channel">The Odin Project.</p> 
-                            <p class="views">29,985 views</p>
+                            <p class="title">Barcelona vs Real Madrid (5-0)</p>
+                            <p class="channel">FEEL MY STYLE</p> 
+                            <p class="views">62M views</p>
                         </div>
                     </div>
 
@@ -89,8 +90,8 @@
                             <a href=""><img src="http://i3.ytimg.com/vi/P_Lvfo08u3w/maxresdefault.jpg" alt=""></a>
                         </div>
                         <div class="vid-info">
-                            <p class="title">Contributing to open source part 2.</p>
-                            <p class="channel">The Odin Project.</p> 
+                            <p class="title">【超えられない壁】ロナウジーニョの異次元テクニック45連発！！</p>
+                            <p class="channel">CR7</p> 
                             <p class="views">29,985 views</p>
                         </div>
                     </div>
@@ -100,9 +101,9 @@
                             <a href=""><img src="http://i3.ytimg.com/vi/uFG6WAhi7Mw/maxresdefault.jpg" alt=""></a>
                         </div>
                         <div class="vid-info">
-                            <p class="title">Contributing to open source part 2.</p>
-                            <p class="channel">The Odin Project.</p> 
-                            <p class="views">29,985 views</p> 
+                            <p class="title">Lionel Messi Respect Moments</p>
+                            <p class="channel">JackieMT</p> 
+                            <p class="views">1.8M views</p> 
                         </div>
                     </div>
 
@@ -111,8 +112,8 @@
                             <a href=""><img src="http://i3.ytimg.com/vi/7vlSdLatXow/hqdefault.jpg" alt=""></a>
                         </div>
                         <div class="vid-info">
-                            <p class="title">Contributing to open source part 2.</p>
-                            <p class="channel">The Odin Project.</p> 
+                            <p class="title">Best of LeBron James So Far This Season</p>
+                            <p class="channel">NBA</p> 
                             <p class="views">29,985 views</p>
                         </div>
                     </div>
@@ -122,9 +123,9 @@
                             <a href=""><img src="http://i3.ytimg.com/vi/Jeiu7y-a220/maxresdefault.jpg"  alt=""></a>
                         </div>
                         <div class="vid-info">
-                            <p class="title">Contributing to open source part 2.</p>
-                            <p class="channel">The Odin Project.</p> 
-                            <p class="views">29,985 views</p>
+                            <p class="title">Barcelona vs Real Madrid (5-0)</p>
+                            <p class="channel">FEEL MY STYLE</p> 
+                            <p class="views">62M views</p>
                         </div>
                     </div>
 
@@ -133,8 +134,8 @@
                             <a href=""><img src="http://i3.ytimg.com/vi/P_Lvfo08u3w/maxresdefault.jpg" alt=""></a>
                         </div>
                         <div class="vid-info">
-                            <p class="title">Contributing to open source part 2.</p>
-                            <p class="channel">The Odin Project.</p> 
+                            <p class="title">【超えられない壁】ロナウジーニョの異次元テクニック45連発！！</p>
+                            <p class="channel">CR7</p> 
                             <p class="views">29,985 views</p>
                         </div>
                     </div>
@@ -144,9 +145,9 @@
                             <a href=""><img src="http://i3.ytimg.com/vi/uFG6WAhi7Mw/maxresdefault.jpg" alt=""></a>
                         </div>
                         <div class="vid-info">
-                            <p class="title">Contributing to open source part 2.</p>
-                            <p class="channel">The Odin Project.</p> 
-                            <p class="views">29,985 views</p> 
+                            <p class="title">Lionel Messi Respect Moments</p>
+                            <p class="channel">JackieMT</p> 
+                            <p class="views">1.8M views</p> 
                         </div>
                     </div>
 
@@ -155,8 +156,8 @@
                             <a href=""><img src="http://i3.ytimg.com/vi/7vlSdLatXow/hqdefault.jpg" alt=""></a>
                         </div>
                         <div class="vid-info">
-                            <p class="title">Contributing to open source part 2.</p>
-                            <p class="channel">The Odin Project.</p> 
+                            <p class="title">Best of LeBron James So Far This Season</p>
+                            <p class="channel">NBA</p> 
                             <p class="views">29,985 views</p>
                         </div>
                     </div>
@@ -166,9 +167,9 @@
                             <a href=""><img src="http://i3.ytimg.com/vi/Jeiu7y-a220/maxresdefault.jpg"  alt=""></a>
                         </div>
                         <div class="vid-info">
-                            <p class="title">Contributing to open source part 2.</p>
-                            <p class="channel">The Odin Project.</p> 
-                            <p class="views">29,985 views</p>
+                            <p class="title">Barcelona vs Real Madrid (5-0)</p>
+                            <p class="channel">FEEL MY STYLE</p> 
+                            <p class="views">62M views</p>
                         </div>
                     </div>
 
@@ -177,8 +178,8 @@
                             <a href=""><img src="http://i3.ytimg.com/vi/P_Lvfo08u3w/maxresdefault.jpg" alt=""></a>
                         </div>
                         <div class="vid-info">
-                            <p class="title">Contributing to open source part 2.</p>
-                            <p class="channel">The Odin Project.</p> 
+                            <p class="title">【超えられない壁】ロナウジーニョの異次元テクニック45連発！！</p>
+                            <p class="channel">CR7</p> 
                             <p class="views">29,985 views</p>
                         </div>
                     </div>
@@ -188,9 +189,9 @@
                             <a href=""><img src="http://i3.ytimg.com/vi/uFG6WAhi7Mw/maxresdefault.jpg" alt=""></a>
                         </div>
                         <div class="vid-info">
-                            <p class="title">Contributing to open source part 2.</p>
-                            <p class="channel">The Odin Project.</p> 
-                            <p class="views">29,985 views</p> 
+                            <p class="title">Lionel Messi Respect Moments</p>
+                            <p class="channel">JackieMT</p> 
+                            <p class="views">1.8M views</p> 
                         </div>
                     </div>
 
@@ -199,8 +200,8 @@
                             <a href=""><img src="http://i3.ytimg.com/vi/7vlSdLatXow/hqdefault.jpg" alt=""></a>
                         </div>
                         <div class="vid-info">
-                            <p class="title">Contributing to open source part 2.</p>
-                            <p class="channel">The Odin Project.</p> 
+                            <p class="title">Best of LeBron James So Far This Season</p>
+                            <p class="channel">NBA</p> 
                             <p class="views">29,985 views</p>
                         </div>
                     </div>
@@ -210,77 +211,24 @@
                             <a href=""><img src="http://i3.ytimg.com/vi/Jeiu7y-a220/maxresdefault.jpg"  alt=""></a>
                         </div>
                         <div class="vid-info">
-                            <p class="title">Contributing to open source part 2.</p>
-                            <p class="channel">The Odin Project.</p> 
-                            <p class="views">29,985 views</p>
+                            <p class="title">Barcelona vs Real Madrid (5-0)</p>
+                            <p class="channel">FEEL MY STYLE</p> 
+                            <p class="views">62M views</p>
                         </div>
                     </div>
 
-                    <div class="suggest-vid">
-                        <div class="vid">
-                            <a href=""><img src="http://i3.ytimg.com/vi/P_Lvfo08u3w/maxresdefault.jpg" alt=""></a>
-                        </div>
-                        <div class="vid-info">
-                            <p class="title">Contributing to open source part 2.</p>
-                            <p class="channel">The Odin Project.</p> 
-                            <p class="views">29,985 views</p>
-                        </div>
-                    </div>
 
                     <div class="suggest-vid">
                         <div class="vid">
-                            <a href=""><img src="http://i3.ytimg.com/vi/uFG6WAhi7Mw/maxresdefault.jpg" alt=""></a>
+                            <a href=""><img src="http://i3.ytimg.com/vi/adseCgsYSYs/maxresdefault.jpg" style="width: 100%;" alt=""></a>
                         </div>
                         <div class="vid-info">
-                            <p class="title">Contributing to open source part 2.</p>
-                            <p class="channel">The Odin Project.</p> 
-                            <p class="views">29,985 views</p> 
+                           <p class="title">10 Times Lionel Messi Showed Who Is The Boss - HD</p>
+                           <p class="channel">Magical Messi</p> 
+                           <p class="views">14M views</p>
                         </div>
                     </div>
 
-                    <div class="suggest-vid">
-                        <div class="vid">
-                            <a href=""><img src="http://i3.ytimg.com/vi/7vlSdLatXow/hqdefault.jpg" alt=""></a>
-                        </div>
-                        <div class="vid-info">
-                            <p class="title">Contributing to open source part 2.</p>
-                            <p class="channel">The Odin Project.</p> 
-                            <p class="views">29,985 views</p>
-                        </div>
-                    </div>
-
-                    <div class="suggest-vid">
-                        <div class="vid">
-                            <a href=""><img src="http://i3.ytimg.com/vi/Jeiu7y-a220/maxresdefault.jpg"  alt=""></a>
-                        </div>
-                        <div class="vid-info">
-                            <p class="title">Contributing to open source part 2.</p>
-                            <p class="channel">The Odin Project.</p> 
-                            <p class="views">29,985 views</p>
-                        </div>
-                    </div>
-
-                    <div class="suggest-vid">
-                        <div class="vid">
-                            <a href=""><img src="http://i3.ytimg.com/vi/P_Lvfo08u3w/maxresdefault.jpg" alt=""></a>
-                        </div>
-                        <div class="vid-info">
-                            <p class="title">Contributing to open source part 2.</p>
-                            <p class="channel">The Odin Project.</p> 
-                            <p class="views">29,985 views</p>
-                        </div>
-                    </div>
-
-                    <div class="suggest-vid">
-                        <div class="vid">
-                            <a href=""><img src="http://i3.ytimg.com/vi/uFG6WAhi7Mw/maxresdefault.jpg" alt=""></a>
-                        </div>
-                        <div class="vid-info">
-                            <p class="title">Contributing to open source part 2.</p>
-                            <p class="channel">The Odin Project.</p> 
-                            <p class="views">29,985 views</p> 
-                        </div>
-                    </div>
                     <div class="more">
                         <a href="" class="upnext">Up next</a>
                         <div class="" style="float:right">
