added more icons to navbar

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
             
             <i class="fa fa-th"></i>
 
+            <i class="fa fa-user fa-lg"></i> 
+
             <button class="sign-in">Sign in</button>
 
         </header>
